## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = libfdproto libfdcore extensions

MAINTAINERCLEANFILES = \
    configure include/freeDiameter/config.h.in \
    aclocal.m4 m4/ltsugar.m4 m4/libtool.m4 m4/ltversion.m4 \
    m4/lt~obsolete.m4 m4/ltoptions.m4 \
    build-aux/ar-lib build-aux/config.guess build-aux/depcomp \
	build-aux/ltmain.sh build-aux/test-driver build-aux/compile \
	build-aux/config.sub build-aux/missing build-aux/install-sh \
	build-aux/ylwrap \
    Makefile.in \
	include/freeDiameter/version.h libfdcore/fdd.tab.y libfdcore/lex.fdd.l
MOSTLYCLEANFILES = core *.stackdump
